syntax = "proto3";

package chat_api_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "https://github.com/romanfomindev/microservices-chat-server/pkg/chat_api_v1;chat_api_v1";

service ChatApi {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc ConnectChat (ConnectChatRequest) returns (stream Message);
}

message CreateRequest {
  string chatName = 1;
  repeated string usernames = 2;
}

message CreateResponse {
  uint64 id = 1;
}

message DeleteRequest {
  uint64 id = 1;
}

message SendMessageRequest {
  uint64 chat_id = 1;
  Message message = 2;
}

message ConnectChatRequest {
  uint64 chat_id = 1;
}

message Message {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp created_at = 3;
}

